--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
+    <form id="create-task-form">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
+      <input type="submit" id= "submit-button" value="Create New Task">
+        <!-- above: added id to target this for the .preventDefault() event  -->
+        <!-- below is another way to add button since this is in a form already: -->
+          <!-- <button value ="Create New Task">submit</button> -->
     </form>
 
     <div id="list">
-      <h2>My Todos</h2>
+      <h2>My To-Do List:</h2>
       <ul id="tasks">
       </ul>
     </div>
